# k-stgr-2

.devcontainer/: devcontainer.json
ST/: README.MD
ST/t1/: README.md  panty.py  pyproject.toml  requirements.txt
ST/t1/src/: pag1.py  pag2.py  pag3.py  u.py  utils.py 
TUT/: README.MD
TUT/tu1/: README.md  panty.py  pyproject.toml  ru.sh
TUT/tu1/.streamlit/: config.toml
TUT/tu1/src/: Intro.py  c1.py  c2.py  c3.py  c4.py  c5.py  c6.py  c7.py  warn.py
WO/: README.MD
