[project]
name = "tu1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=13.9.3",
    "streamlit>=1.39.0",
]

# This section is for deploying 
[tool.poetry]
name = "Tutoza"
version = "0.1.2"
description = "Tutorial Panty"
authors = ["BootyDance <buty@buty>"]  # Replace with your name and email

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.9.2"
pandas = ">=2.2.3"
rich = ">=13.9.3"
streamlit = ">=1.39.0"
